fixed: card 2 columns overlapping left images to the right in small screen

--- a/web/src/scss/card-partner-2-columns.scss
+++ b/web/src/scss/card-partner-2-columns.scss
@@ -5,7 +5,7 @@
     padding: 30px 0 50px 0;
 
     @media screen and (min-width: 992px) {
-        padding: 50px 50px 0 50px;
+        padding: 50px 50px 0 0;
     }
 
 
@@ -45,6 +45,10 @@
                 width: 250px;
 
                 @media screen and (min-width:992px) {
+                    width: 300px;
+                }
+
+                @media screen and (min-width:1200px) {
                     width: 400px;
                 }
 
@@ -55,8 +59,13 @@
                     height: auto;
 
                     @media screen and (min-width:992px) {
+                        width: 300px;
+                        height: auto;
+                    }
+
+                    @media screen and (min-width:1200px) {
                         width: 400px;
-                        height: 200px;
+                        height: auto;
                     }
                 }
 
